qstring-allocations: Also use QL1S for QString::{contains, indexOf}

If the haystack is empty passing a QSL will be faster, but as soon
as the haystack gets bigger that advantage is gone.

BUG: 361691